localization in progress

--- a/Hippo/UIView/TableViewCell/FeedbackTableCell/FeedbackTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/FeedbackTableCell/FeedbackTableViewCell.xib
@@ -82,7 +82,7 @@
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Eef-wM-49H">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Eef-wM-49H">
                                 <rect key="frame" x="15" y="106.5" width="545" height="201.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ld8-dP-GzE">
@@ -90,7 +90,7 @@
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" canCancelContentTouches="NO" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="HJ3-Hh-fcj">
                                                 <rect key="frame" x="0.0" y="0.0" width="545" height="80"/>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.94901960784313721" green="0.96078431372549022" blue="0.97254901960784312" alpha="0.0" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="80" id="JMf-0Y-oan"/>
                                                 </constraints>
@@ -107,10 +107,9 @@
                                         </subviews>
                                     </stackView>
                                     <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9xd-tc-Pxw">
-                                        <rect key="frame" x="445" y="96.5" width="100" height="40"/>
+                                        <rect key="frame" x="0.0" y="96.5" width="545" height="40"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="c1E-Ip-EFL"/>
                                             <constraint firstAttribute="height" constant="40" id="hgO-sM-C18"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
